--- a/exercise-5/style.css
+++ b/exercise-5/style.css
@@ -6,11 +6,10 @@
 
 .container {
     display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     align-items: center;
     background-color: blue;
-    height: 600px;
+    height: 100vh;
+    width: fit-content;
  
 }
 
