--- a/exercise-11/style.css
+++ b/exercise-11/style.css
@@ -6,11 +6,15 @@
 
 .container {
     display:grid;
+    grid-template-columns: auto auto auto;
     text-align: center;
+    padding: 20px;
+    background-color: aquamarine;
 }
 
 .item {
+    padding: 20px;
     border: 2px solid black;
-    background-color: bisque;
+    background-color: rgb(235, 253, 255);
 }
 
