--- a/exercise-19/style.css
+++ b/exercise-19/style.css
@@ -4,36 +4,45 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     font-weight:400;
-    font-size: 18px;
+    font-size: 1rem;
     text-align: center;
     line-height: 0;
 }
 
+.container{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    align-items: center;
+    justify-content:center;
+}
+
 .calculator {
-    margin: 30px;
     display:grid;
     grid-template-columns:repeat(4, 70px);
     text-align: center;
-    padding: 15px;
+    padding: 1rem;
     background-color: rgb(0, 0, 0);
-    width: fit-content;
-    border-radius: 8px;
-    gap: 5px;
+    border-radius: 0.5rem;
+    gap: 0.5rem;
     box-shadow: -10px 20px 10px -5px rgba(0, 0, 0, 0.305);
+    width:fit-content ;
+
 }
+ 
+
 
 .key{
-    border-radius: 8px;
-    padding: 20px;
-    border: 2px solid black;
+    border-radius: 0.5rem;
+    padding: 1.25rem;
     background-color: rgb(235, 253, 255);
     transition: all ease-in-out 0.10s;
     cursor: pointer;
 }
 
 .display{
-    grid-column: 1 / 5;
-    margin-bottom: 10px;
+    grid-column: span 4;
+    margin-bottom: 0.65rem;
     background-color:#9ACD31;  
 }
 
@@ -64,7 +73,6 @@
 }
 
 .equal:hover{
-    
     color: rgba(255, 255, 255, 0.76);
     background-color: #74f272bb;
     
@@ -80,7 +88,8 @@
     color: rgba(255, 255, 255, 0.746);
 }
 
-@media only screen (max-width:480px){
-  
-
+@media screen and (max-width:600px){
+    .calculator {
+        grid-template-columns:repeat(4, auto); 
+    }
 }
